<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_dark_background">

    <TextView
        android:id="@+id/login_screen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="110dp"
        android:text="@string/login"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/purple_primary"
        android:layout_gravity="center" />

    <TextView
        android:id="@+id/first_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="101dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="1dp"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:text="@string/email_word"/>

    <EditText
        android:id="@+id/et_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/email"
        android:textColor="@color/white"
        android:textColorHint="@color/gray"
        android:backgroundTint="@color/white"
        android:inputType="textEmailAddress"
        android:ems="10"/>

    <TextView
        android:id="@+id/sec_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="101dp"
        android:text="@string/password_word"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/et_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/gray" />

    <TextView
        android:id="@+id/txt_forgot_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/forgot_password"
        android:textSize="14sp"
        android:gravity="center"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_login"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/login"
            android:layout_gravity="center"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:backgroundTint="@color/cyan_secondary"/>

<!--        <Button-->
<!--            android:id="@+id/btnLogin"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="40dp"-->
<!--            android:layout_marginStart="90dp"-->
<!--            android:gravity="center"-->
<!--            android:text="Login"-->
<!--            android:textSize="16dp"-->
<!--            android:textColor="@color/black"-->
<!--            android:backgroundTint="@color/cyan_secondary"/>-->
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="75dp"
            android:layout_gravity="center_horizontal">

<!--         <Button-->
<!--                android:id="@+id/btnForgetPassword"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginTop="40dp"-->
<!--                android:layout_gravity="center"-->
<!--                android:textSize="14dp"-->
<!--                android:text="Forgot Password?"-->
<!--                android:textColor="@color/black"-->
<!--                android:backgroundTint="@color/cyan_secondary"/>-->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dont_have_account"
                android:textColor="@color/gray"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txt_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/sign_up"
                android:layout_marginStart="10dp"
                android:textSize="16sp" />

        </LinearLayout>

</LinearLayout>